--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -443,31 +443,31 @@ footer {
 }
 
 #item-two {
-    background: url('../images/santa-image.jpg') no-repeat center center;
+    background: url('../images/santa-claus-image.webp') no-repeat center center;
     background-size: cover;
     position: relative;
 }
 
 #item-three {
-    background: url('../images/vecteezy_bologna-italy-2018-people-shopping-in-french-christmas__847.jpg') no-repeat center center;
+    background: url('../images/food-image.webp') no-repeat center center;
     background-size: cover;
     position: relative;
 }
 
 #item-six {
-    background: url('../images/decorations-image.jpg') no-repeat center center;
+    background: url('../images/decoration-image.webp') no-repeat center center;
     background-size: cover;
     position: relative;
 }
 
 #item-seven {
-    background: url('../images/amusement-park-bazaar-colorful-christmas-fairground-christmas-decoration-560579-pxhere.com.jpg') no-repeat center center;
+    background: url('../images/games-image.webp') no-repeat center center;
     background-size: cover;
     position: relative;
 }
 
 #item-ten {
-    background: url('../images/cookie-decoration-image.jpg') no-repeat center center;
+    background: url('../images/cookie-decorating-image.webp') no-repeat center center;
     background-size: cover;
     position: relative;
 }
