--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -405,6 +405,8 @@ footer {
     padding-top: 10px;
     padding-bottom: 10px;
     background-color: #FFFAFA;
+    max-width: 90%;
+    margin: 0 auto;
 }
 
 .grid {
