Update img for comp page background

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -480,7 +480,7 @@ footer {
 
 .form-section {
     height: 1000px;
-    background: url('../images/lapland-g431492e63_1920.jpg');
+    background: url('../images/reindeer-image.jpg');
     background-position: center;
     background-size: cover;
     clear: left;
