--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,7 +96,7 @@ body {
 
 #index-main-image {
     width: 100%;
-    background: url('../images/hero-image.jpg') no-repeat center center;
+    background: url('../images/hero-image.webp') no-repeat center center;
     height: 400px; 
     background-size: cover;
 }
@@ -480,7 +480,7 @@ footer {
 
 .form-section {
     height: 1000px;
-    background: url('../images/reindeer-image.jpg');
+    background: url('../images/lapland-image.webp');
     background-position: center;
     background-size: cover;
     clear: left;
