--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,9 +13,15 @@
 /* General body styling */
 
 body {
-    font-family: 'Lora', serif;
+    font-family: 'Montserrat', sans-serif;
     font-weight: 300;
     color: black;
+}
+
+/* Headings font style */
+
+h1, h2, h3, h4 {
+    font-family: 'Lora', serif;
 }
 
 /* Header styling */
@@ -42,6 +48,7 @@ body {
     justify-content: space-around;
     font-size: 150%;
     letter-spacing: 0.1em;
+    font-family: 'Lora', serif;
     
 }
 
@@ -112,7 +119,6 @@ body {
 #image-slogan {
     text-transform: uppercase;
     font-size: 120%;
-    font-family: 'Montserrat', sans-serif;
     width: 250px;
     height: 130px;
     padding-top: 20px;
@@ -123,6 +129,10 @@ body {
     left: 30px;
     position: absolute;
     border: 1px solid #FFFAFA;
+}
+
+#image-slogan h2 {
+    font-family: 'Montserrat', sans-serif;
 }
 
 /* Information plus pathway div styling */
@@ -149,6 +159,7 @@ body {
     justify-content: center;
     align-items: baseline;
     padding-bottom: 1.5rem;
+    text-align: center;
 }
 
 h3 i {
@@ -172,7 +183,6 @@ h3 i {
 }
 
 .info-p {
-    font-family: 'Montserrat', sans-serif;
     color: black;
     text-align: justify;
     padding-bottom: 15px;
@@ -180,7 +190,6 @@ h3 i {
 
 #come-and-see-p {
     text-align: center;
-    font-family: 'Montserrat', sans-serif;
     color: black;
 }
 
@@ -234,7 +243,6 @@ h3 i {
     padding-top: 25px;
     margin-left: 35px;
     margin-right: 35px;
-    font-family: 'Montserrat', sans-serif;
     text-align: center;
 }
 
@@ -254,7 +262,6 @@ h3 i {
 }
 
 .button a {
-    font-family: 'Montserrat', sans-serif;
     color: #FFFAFA;
     text-decoration: none;
     width: 100%;
@@ -346,10 +353,6 @@ footer {
     width: 100%;
 }
 
-.contact-info {
-    font-family: 'Montserrat', sans-serif;
-}
-
 #address-details {
     text-align: right;
 }
@@ -437,7 +440,6 @@ footer {
 }
 
 .grid-text-paragraphs {
-    font-family: 'Montserrat', sans-serif;
     padding-top: 15px;
     width: 90%;
     margin: 0 auto;
@@ -506,13 +508,11 @@ footer {
 }
 
 .competition-form p {
-    font-family: 'Montserrat', sans-serif;
     margin-bottom: 20px;
     text-align: center;
 }
 
 .text-input{
-    font-family: 'Montserrat', sans-serif;
     color: #FFFAFA;
     width: 100%;
     height: 25px;
@@ -526,14 +526,12 @@ footer {
 }
 
 .radio-buttons {
-    font-family: 'Montserrat', sans-serif;
     padding-bottom: 35px;
     width: 100%;
 }
 
 .terms {
     margin-bottom: 35px;
-    font-family: 'Montserrat', sans-serif;
 }
 
 .enter-button {
